--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -75,6 +75,7 @@
     <Compile Include="AdaptiveStream\AdaptiveStreamCore.fs" />
     <Compile Include="AdaptiveStream\AdaptiveStream.fs" />
     <Compile Include="Events\Observable.fs" />
+    <Compile Include="Git.fs" />
     <Compile Include="Builders.fs" />
     <Compile Include="CSharp.fs" />
     <Compile Include="Adapters\EventAdapter.fs" />
