--- a/src/Aardvark.Base.Incremental/paket.template
+++ b/src/Aardvark.Base.Incremental/paket.template
@@ -1,13 +1,6 @@
-type file
+type project
 id Aardvark.Base.Incremental
 version 1.0
 authors VRVis Research Center
 description
     Aardvark.Base.Incremental provides a framework for incremental computations
-dependencies
-    Aardvark.Base = CURRENTVERSION
-    Aardvark.Base.FSharp = CURRENTVERSION
-    Aardvark.Base.Essentials = CURRENTVERSION
-files
-    ..\..\bin\Release\Aardvark.Base.Incremental.dll ==> lib\net45
-    ..\..\bin\Release\Aardvark.Base.Incremental.pdb ==> lib\net45
