--- a/src/Tests/Aardvark.Base.Runtime.Tests/Aardvark.Base.Runtime.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Runtime.Tests/Aardvark.Base.Runtime.Tests.fsproj
@@ -62,6 +62,7 @@
   -->
   <ItemGroup>
     <Compile Include="DynamicCode.fs" />
+    <Compile Include="CoderTests.fs" />
     <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
