--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -96,6 +96,7 @@
     <Compile Include="Ag.fs" />
     <Compile Include="NewAg.fs" />
     <Compile Include="Control.fs" />
+    <Compile Include="pset.fs" />
     <None Include="paket.references" />
     <Compile Include="Native\BlobStore.fs" />
     <Compile Include="Native\Pointer.fs" />
