--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -78,6 +78,7 @@
     <Compile Include="Events\Observable.fs" />
     <Compile Include="Builders.fs" />
     <Compile Include="CSharp.fs" />
+    <Compile Include="DomainTypeUtilities.fs" />
     <Compile Include="Adapters\EventAdapter.fs" />
     <None Include="paket.references" />
   </ItemGroup>
