--- a/src/Aardvark.Base/Aardvark.Base.csproj
+++ b/src/Aardvark.Base/Aardvark.Base.csproj
@@ -154,6 +154,7 @@
     <Compile Include="RangesBoxes\Range.cs" />
     <Compile Include="RangesBoxes\RangeExtensions.cs" />
     <Compile Include="Rendering\BlendMode.cs" />
+    <Compile Include="Rendering\DepthTestMode.cs" />
     <Compile Include="Rendering\Modes.cs" />
     <Compile Include="Rendering\RasterizerState.cs" />
     <Compile Include="Rendering\SamplerState.cs" />
