--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -54,18 +54,6 @@
     <Compile Include="Prelude\Logging.fs" />
     <Compile Include="Prelude\FSLibExtensions.fs" />
     <Compile Include="Prelude\Measures.fs" />
-    <Compile Include="Datastructures\Mutable\FixedSizeArray.fs" />
-    <Compile Include="Datastructures\Mutable\Order.fs" />
-    <Compile Include="Datastructures\Mutable\OrderMaintenance.fs" />
-    <Compile Include="Datastructures\Mutable\SkipList.fs" />
-    <Compile Include="Datastructures\Mutable\AVL.fs" />
-    <Compile Include="Datastructures\Mutable\StableSet.fs" />
-    <Compile Include="Datastructures\Mutable\ConcurrentHashQueue.fs" />
-    <Compile Include="Datastructures\Immutable\HashMap.fs" />
-    <Compile Include="Datastructures\Immutable\PersistentHashSet.fs" />
-    <Compile Include="Datastructures\Immutable\FingerTree.fs" />
-    <Compile Include="Datastructures\Immutable\pset.fs" />
-    <Compile Include="Datastructures\Immutable\MapExt.fs" />
     <Compile Include="Interop\Dictionary.fs" />
     <Compile Include="Interop\Symbol.fs" />
     <Compile Include="Interop\Vectors.fs" />
@@ -77,6 +65,20 @@
     <Compile Include="Interop\CSharpList.fs" />
     <Compile Include="Interop\Tensors.fs" />
     <Compile Include="Interop\NativeTensors.fs" />
+    <Compile Include="Datastructures\Mutable\FixedSizeArray.fs" />
+    <Compile Include="Datastructures\Mutable\Order.fs" />
+    <Compile Include="Datastructures\Mutable\OrderMaintenance.fs" />
+    <Compile Include="Datastructures\Mutable\SkipList.fs" />
+    <Compile Include="Datastructures\Mutable\AVL.fs" />
+    <Compile Include="Datastructures\Mutable\StableSet.fs" />
+    <Compile Include="Datastructures\Mutable\ConcurrentHashQueue.fs" />
+    <Compile Include="Datastructures\Immutable\IntMap.fs" />
+    <Compile Include="Datastructures\Immutable\HMap.fs" />
+    <Compile Include="Datastructures\Immutable\HashMap.fs" />
+    <Compile Include="Datastructures\Immutable\PersistentHashSet.fs" />
+    <Compile Include="Datastructures\Immutable\FingerTree.fs" />
+    <Compile Include="Datastructures\Immutable\pset.fs" />
+    <Compile Include="Datastructures\Immutable\MapExt.fs" />
     <Compile Include="Reflection\TypeInfo.fs" />
     <Compile Include="Reflection\FunctionReflection.fs" />
     <Compile Include="Reflection\Formatf.fs" />
