--- a/src/Aardvark.Base.IO/Aardvark.Base.IO.csproj
+++ b/src/Aardvark.Base.IO/Aardvark.Base.IO.csproj
@@ -1,105 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C2C8BA0D-992B-4BA7-8A6A-EA7A3207BBE6}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Aardvark.Base</RootNamespace>
-    <AssemblyName>Aardvark.Base.IO</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\..\bin\Debug</OutputPath>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>..\..\bin\Debug\Aardvark.Base.IO.XML</DocumentationFile>
-    <NoWarn>1591;612</NoWarn>
+	<NoWarn>612</NoWarn>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\..\Bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\bin\Release</OutputPath>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>..\..\Bin\Release\Aardvark.Base.IO.XML</DocumentationFile>
-    <NoWarn>1591;612</NoWarn>
+	<NoWarn>612</NoWarn>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Annotations.cs" />
-    <Compile Include="BaseCoder.cs" />
-    <Compile Include="BinaryReadingCoder.cs" />
-    <Compile Include="BinaryReadingCoder_auto.cs" />
-    <Compile Include="FastObjectFactory.cs" />
-    <Compile Include="ITypedMap.cs" />
-    <Compile Include="RegisterTypeInfoAttribute.cs" />
-    <Compile Include="StreamCodeReader.cs" />
-    <Compile Include="StreamCodeReader_auto.cs" />
-    <None Include="StreamCodeReader_template.cs" />
-    <Compile Include="StreamCodeWriter.cs" />
-    <Compile Include="StreamCodeWriter_auto.cs" />
-    <None Include="StreamCodeWriter_template.cs" />
-    <Compile Include="StreamWriter2.cs" />
-    <Compile Include="SymMap.cs" />
-    <Compile Include="TypeCoder.cs" />
-    <Compile Include="TypeCoder_auto.cs" />
-    <Compile Include="TypeExtensions.cs" />
-    <Compile Include="TypeInfo.cs" />
-    <Compile Include="TypeInfoVersion.cs" />
-    <Compile Include="UberStream.cs" />
-    <Compile Include="WorkDir.cs" />
-    <Compile Include="XmlParser.cs" />
-    <Compile Include="XmlReadingCoder.cs" />
-    <Compile Include="XmlReadingCoder_auto.cs" />
-    <Compile Include="XmlWritingCoder.cs" />
-    <Compile Include="XmlWritingCoder_auto.cs" />
-    <Compile Include="YieldingStream.cs" />
-    <Compile Include="ZipFileContainer.cs" />
-    <Compile Include="ZipFileHeader.cs" />
-    <None Include="paket.references" />
-    <None Include="paket.template" />
-    <None Include="XmlWritingCoder_template.cs" />
-    <None Include="XmlReadingCoder_template.cs" />
-    <None Include="TypeCoder_template.cs" />
-    <None Include="BinaryReadingCoder_template.cs" />
-    <Compile Include="BinaryWritingCoder.cs" />
-    <Compile Include="BinaryWritingCoder_auto.cs" />
-    <None Include="BinaryWritingCoder_template.cs" />
-    <Compile Include="ChunkedMemoryStream.cs" />
-    <Compile Include="CodingExtensions.cs" />
-    <Compile Include="Converter.cs" />
-    <Compile Include="FieldCoderExtensions.cs" />
-    <Compile Include="GzipUtils.cs" />
-    <Compile Include="IAwakeable.cs" />
-    <Compile Include="ICoder.cs" />
-    <Compile Include="ICoder_auto.cs" />
-    <None Include="ICoder_template.cs" />
-    <Compile Include="IFieldCodeable.cs" />
-    <Compile Include="NetworkOrderBinaryReader.cs" />
-    <Compile Include="NetworkOrderBinaryWriter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+	<Compile Remove="ICoder_template.cs" />
+	<Compile Remove="ICoder_generator.cs" />
+	<Compile Remove="BinaryReadingCoder_template.cs" />
+	<Compile Remove="BinaryReadingCoder_generator.cs" />
+	<Compile Remove="BinaryWritingCoder_template.cs" />
+	<Compile Remove="BinaryWritingCoder_generator.cs" />
+	<Compile Remove="StreamCodeReader_template.cs" />
+	<Compile Remove="StreamCodeReader_generator.cs" />
+	<Compile Remove="StreamCodeWriter_template.cs" />
+	<Compile Remove="StreamCodeWriter_generator.cs" />
+	<Compile Remove="TypeCoder_template.cs" />
+	<Compile Remove="TypeCoder_generator.cs" />
+	<Compile Remove="XmlReadingCoder_template.cs" />
+	<Compile Remove="XmlReadingCoder_generator.cs" />
+	<Compile Remove="XmlWritingCoder_template.cs" />
+	<Compile Remove="XmlWritingCoder_generator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.Base\Aardvark.Base.csproj">
@@ -107,5 +39,8 @@
       <Name>Aardvark.Base</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
