--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,13 @@ language: csharp
 before_install: 
   # Make sure mono is installed,
   # pipe stdout to dev/null because qq is still too chatty
-  - wget -q https://packages.microsoft.com/config/ubuntu/14.04/packages-microsoft-prod.deb
+  - wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
   - sudo dpkg -i packages-microsoft-prod.deb
   - sudo apt-get install apt-transport-https -qq > /dev/null
   - sudo apt-get update -qq > /dev/null
-  - sudo apt-get install -qq mono-devel dotnet-sdk-2.1 > /dev/null
+  - sudo apt-get install -qq msbuild mono-devel dotnet-sdk-2.1 > /dev/null
   - mozroots --import --sync 
   - mcs --version
-  - mono .paket/paket.bootstrapper.exe
-  - mono .paket/paket.exe restore
 script:
-  - msbuild /t:Restore src/Aardvark.sln
+  - sh ./build.sh Restore
   - msbuild /t:Rebuild /p:DefineConstants="TRAVIS_CI" src/Aardvark.sln 
