--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
 
 build_script:
-    - sh ./build.sh Restore
+    - dotnet tool install Paket --tool-path .paket
+    - .paket/paket restore
     - dotnet msbuild -p:Configuration=Release src/Aardvark.sln
     - VERSION=`git describe --abbrev=0` && .paket/paket pack --build-config Release --version $VERSION bin/
